1999-11-03    <jrb@redhat.com>

	* src/io-gif.c (gif_get_extension): Read 'til the next empty block
	correctly, now.

1999-11-02  Cody Russell  <bratsche@dfw.net>
	* src/gdk-pixbuf-drawable.c: Changed the behavior to return NULL
	if part of the requested image is offscreen, rather than clipping
	the image.

1999-11-02  Jonathan Blandford  <jrb@redhat.com>

	* src/io-gif.c (gif_fill_in_lines): Fill in the gif's blank areas
	for interlacing and progressive loading.

1999-11-02  Cody Russell  <bratsche@dfw.net>
	* src/gdk-pixbuf-drawable.c (gdk_pixbuf_from_drawable_core): Now
	calls gdk_pixbuf_new_from_art_pixbuf() instead of gdk_pixbuf_new().

1999-11-02  Jonathan Blandford  <jrb@redhat.com>

	* src/io-gif.c (gif_main_loop): Now progressive gif loading works!
	It's a little slow though. )-:

1999-11-02 Elliot Lee <sopwith@redhat.com>
	* src/gdk-pixbuf-loader.[ch], src/gdk-pixbuf-io.h: Make the arguments to the
	write/load_increment operations const-correct.

1999-11-02  Federico Mena Quintero  <federico@redhat.com>

	* src/gnome-canvas-pixbuf.c (gnome_canvas_pixbuf_point):
	Implemented the ::point() method.  We do a simple containment test
	instead of a full distance calculation since the canvas is going
	to change to that scheme, anyways.

1999-11-02 Elliot Lee <sopwith@redhat.com>

	* src/testpixbuf.c: Allow using $TBF_READLEN to specify the size of the chunks
	that are read from the input file.

1999-11-02  Larry Ewing  <lewing@gimp.org>

	* src/gnome-canvas-pixbuf.c (gnome_canvas_pixbuf_render): add aa
	render function.
	(gnome_canvas_pixbuf_class_init): add gnome_canvas_pixbuf_render
	to class.
	
1999-11-02  Federico Mena Quintero  <federico@redhat.com>

	* src/gnome-canvas-pixbuf.c (compute_render_affine): Moved the
	affine computation code from ::draw() to here, since it is needed
	by ::point() as well.

1999-11-02 Elliot Lee <sopwith@redhat.com>

	* src/gdk-pixbuf-loader.c: Reorganize gdk_pixbuf_loader_write into